--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ gemfile:
   - gemfiles/rails_41.gemfile
   - gemfiles/rails_42.gemfile
   - gemfiles/rails_50.gemfile
+  - gemfiles/rails_51.gemfile
 
 env:
   global:
@@ -40,6 +41,8 @@ matrix:
   allow_failures:
     - rvm: jruby-9.1.8.0
       gemfile: gemfiles/rails_50.gemfile
+    - rvm: jruby-9.1.8.0
+      gemfile: gemfiles/rails_51.gemfile
 
   exclude:
     - rvm: 2.4.0
